--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body{
     display: flex;
+    flex-direction: column;
+    color: #000;
 }
 a{
     text-decoration: none;
+    margin: 5px;
 }
+
 a:visited{
     color: #000;
 }
